--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ FodyWeavers.xsd
 /WebApplication5/Properties/ServiceDependencies/soclone - Web Deploy
 /WebApplication5/.config
 /WebApplication5/Properties/serviceDependencies.json
+/WebApplication5/wwwroot/vecteezy_studying-and-learning-online-concept_1270244.svg
